[package]
name = "graphgate-handler"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
graphgate-schema = { path = "../schema" }
graphgate-planner = { path = "../planner" }

async-graphql = "6.0.7"
warp = "0.3.5"
indexmap = { version = "1.8.0", features = ["serde-1"] }
futures-util = { version = "0.3.19", features = ["sink"] }
parser = { version = "3.0.24", package = "async-graphql-parser" }
value = { version = "3.0.24", package = "async-graphql-value" }
once_cell = "1.9.0"
tokio = { version = "1.15.0", features = ["net", "sync", "macros", "time"] }
tokio-stream = "0.1.8"
tokio-tungstenite = { version = "0.16.1", features = ["rustls-tls-native-roots"] }
async-stream = "0.3.2"
tracing = "0.1.29"
anyhow = "1.0.52"
http = "0.2.6"
serde = "1.0.133"
serde_json = "1.0.75"
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
async-trait = "0.1.52"
opentelemetry = { version = "0.16.0", features = ["metrics"] }
chrono = { version = "0.4.19", features = ["serde"] }
