[package]
name = "graphgate-handler"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
graphgate-planner.workspace = true
graphgate-schema.workspace = true
http.workspace = true
indexmap.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
opentelemetry.workspace = true
parser.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tracing.workspace = true
value.workspace = true
warp.workspace = true
