[package]
name = "graphgate-planner"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
graphgate-schema = { path = "../schema" }
graphgate-validation = { path = "../validation" }

parser = { version = "3.0.24", package = "async-graphql-parser" }
value = { version = "3.0.24", package = "async-graphql-value" }
indexmap = { version = "1.8.0", features = ["serde-1"] }
serde = "1.0.133"

[dev-dependencies]
globset = "0.4.8"
serde_json = "1.0.75"
