[package]
name = "graphgate-planner"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
graphgate-schema.workspace = true
graphgate-validation.workspace = true
indexmap.workspace = true
parser.workspace = true
serde.workspace = true
tracing.workspace = true
value.workspace = true

[dev-dependencies]
globset.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
