[package]
name = "graphgate-schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
indexmap = { version = "1.8.0", features = ["serde-1"] }
parser = { version = "3.0.24", package = "async-graphql-parser" }
thiserror = "1.0.30"
tracing = "0.1.37"
value = { version = "3.0.24", package = "async-graphql-value" }
