[package]
name = "graphgate-schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
tracing = "0.1.37"
indexmap.workspace = true
parser.workspace = true
thiserror.workspace = true
value.workspace = true
