[package]
name = "graphgate-schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
indexmap.workspace = true
parser.workspace = true
thiserror.workspace = true
tracing.workspace = true
value.workspace = true
