[package]
name = "graphgate-validation"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
graphgate-schema = { path = "../schema" }

parser = { version = "3.0.24", package = "async-graphql-parser" }
value = { version = "3.0.24", package = "async-graphql-value" }
indexmap = { version = "1.8.0", features = ["serde-1"] }

[dev-dependencies]
once_cell = "1.9.0"
