[package]
name = "graphgate-validation"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
graphgate-schema.workspace = true
indexmap.workspace = true
parser.workspace = true
value.workspace = true

[dev-dependencies]
once_cell.workspace = true
